nocodb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nocodb
  namespace: nocodb
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: nocodb.noschoixpourvous.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nocodb
                port:
                  number: 80
